# earthquake-events-azure

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AzureDiagram.drawio  Bronze Notebook (1).ipynb  Bronze Notebook (2).ipynb  Earthquake Azure Data Engineering Pipeline A Compr 169bae2f77f180bbbc7deff39ca4a313.md  Gold Notebook (1).ipynb  Gold Notebook (2).ipynb  README.md  Silver Notebook (1).ipynb  Silver Notebook (2).ipynb  pyproject.toml  synapse-pipeline:Bronze Notebook.ipynb  synapse-pipeline:Silver Notebook.ipynb
data/bronze/: 2026-01-16_earthquake_data.json
data/gold/2026-01-16/: earthquake_events_gold.csv
data/silver/2026-01-16/: earthquake_events_silver.csv
docs/architecture/: architecture.md
images/: README.md
notebooks/: Bronze Notebook.ipynb
notebooks/databricks/: 01_bronze.ipynb  01_bronze.py  02_silver.ipynb  02_silver.py  03_gold.ipynb  03_gold.py
notebooks/databricks/old/: 01_bronze.ipynb  02_silver.ipynb  03_gold.ipynb
notebooks/synapse/: 02_silver.ipynb
notebooks/synapse/old/: 01_bronze.ipynb  03_gold.ipynb
scripts/: main.py
src/earthquake/: __init__.py  app.py  config.py  logging.py  pipeline.py
src/earthquake/enrich/: gold.py
src/earthquake/extract/: usgs.py
src/earthquake/io/: fs.py  paths.py
src/earthquake/transform/: silver.py
synapse-pipeline/: Silver Notebook.ipynb
tests/: test_transform_silver.py
